--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>yoga</title>
+    <link rel="stylesheet" href="./css/main.css/">
 </head>
+
 <body>
-   content 
+  YOGA CONTENT 
 </body>
 </html>
