HTML structure and css selectors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@
 </head>
 
 <body>
-  YOGA CONTENT 
-  
+  <head>
+    <img src="./img/logo.png" alt="Yoga logo">
+    <nav>
+      <a href="Home"></a>
+      <a href="#">Instructors</a>
+      <a href="#">Schedule</a>
+      <a href="#">About</a>
+      <a href="#">Contacts</a>
+    </nav>
+  </head>
+  <main>
+      <div>
+        <h1>Welcome to Yoga <span>Lifestyle</span> studio!</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo sapiente magni ea minus, animi nulla recusandae harum reprehenderit illo quaerat libero fugiat corporis, quas vero ipsam! Eaque perspiciatis exercitationem atque!</p>
+        <a href="">Sign up for classes</a>
+      </div>
+      <img src="./img/joga pose.png" alt="Yoga pose">
+  </main>
 </body>
 </html>
